--- a/src/components/UI/LoginForm/LoginForm.module.css
+++ b/src/components/UI/LoginForm/LoginForm.module.css
@@ -19,27 +19,6 @@
     font-weight: 400;
 }
 
-.LoginModalInput {
-
-}
-
-.LoginModalButton {
-    width: 100%;
-    padding: 16px 0;
-    align-self: center;
-    background: linear-gradient(180deg, #23e0ec 0%, #07dbc1 100%);
-    color: initial;
-    font-family: inherit;
-    font-size: 24px;
-    font-weight: 500;
-    text-transform: uppercase;
-    border-radius: 4px;
-    box-shadow: inset 0 1px 0 #7de6fd;
-    cursor: pointer;
-    border: none;
-    transition: all .3s ease;
-}
-
 .LoginModalTable {
     padding: 0;
     margin-left: 0;
@@ -73,3 +52,42 @@
     width: 100%;
     max-width: 500px;
 }
+
+.LoginFormRow {
+    display: flex;
+    margin-bottom: 24px;
+    align-items: center;
+    column-gap: 16px;
+}
+
+.LoginFormCenter {
+    font-family: "Fira Sans",sans-serif;
+    font-size: 16px !important;
+    font-weight: 300;
+    line-height: 24px;
+    color: #7d838c;
+    padding-left: 50px;
+    padding-top: 5px;
+    box-sizing: border-box;
+}
+
+.LoginFormCreateButton {
+    width: 100%;
+    opacity: .6;
+    border: 2px solid #fff;
+    border-radius: 3px;
+    background: 0 0;
+    color: #fff;
+    font-size: 21px;
+    transition: all .3s ease;
+    -webkit-appearance: button;
+    cursor: pointer;
+    margin: 20px 0;
+    text-align: center;
+    text-decoration: none;
+    padding: 13px 20px 14px;
+    display: block;
+    font-family: inherit;
+    line-height: inherit;
+}
+
