--- a/src/components/UI/button/MyButton.module.css
+++ b/src/components/UI/button/MyButton.module.css
@@ -1,9 +1,25 @@
 .myBtn {
-    display:block;
-    position:relative;
-    height:42px;
-    flex-grow:0;
-    flex-shrink:0;
-    color:var(--gcm-color-font-main);
-    text-decoration:none
+    width: 100%;
+    padding: 16px 0;
+    align-self: center;
+    background: linear-gradient(180deg, #23e0ec 0%, #07dbc1 100%);
+    color: initial;
+    font-family: inherit;
+    font-size: 24px;
+    font-weight: 500;
+    text-transform: uppercase;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 0 #7de6fd;
+    cursor: pointer;
+    border: none;
+    transition: all .3s ease;
+    margin-top: 24px;
+    line-height: inherit;
+    -webkit-appearance: button;
+}
+
+
+.myBtn::-moz-focus-inner{
+    padding: 0;
+    border: 0;
 }
