--- a/src/components/UI/input/MyInput.module.css
+++ b/src/components/UI/input/MyInput.module.css
@@ -1,9 +1,22 @@
 .myInput {
-    display: flex;
-    margin-bottom: 24px;
-    align-items: center;
-    column-gap: 16px;
-    font-size: 14px;
-    font-family: "Fira Sans",Arial,sans-serif;
-    color: #abacae;
+    display: inline-block;
+    box-sizing: border-box;
+    width: 100%;
+    height: 48px;
+    padding-left: 1rem;
+    padding-right: .5rem;
+    background-color: rgba(3,12,21,.4);
+    background-position: 12px center;
+    background-repeat: no-repeat;
+    font: 400 16px/1.5 "Fira Sans",sans-serif,sans-serif;
+    color: #fff;
+    border: 2px solid rgba(0,0,0,0);
+    background-image: none;
+    border-bottom: 1px solid rgba(255,255,255,.2);
+    border-radius: 4px;
+    outline: 1px solid rgba(0,0,0,0);
+}
+
+.myInput::placeholder {
+    color: #747b82;
 }
