--- a/src/components/UI/FilterSelect/FilterSelect.module.css
+++ b/src/components/UI/FilterSelect/FilterSelect.module.css
@@ -80,3 +80,48 @@
     opacity: 1;
     transform: translateY(0);
 }
+
+.FilterSelect_Button_1 {
+    min-height: 36px;
+    padding: 3px 15px;
+    border-radius: 2px;
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: unset;
+}
+
+.FilterSelect_Button_2 {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 46px;
+    padding: 4px 30px 3px;
+    font-family: "Fira Sans",sans-serif;
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 1;
+    letter-spacing: .1em;
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    border-radius: 3px;
+    outline: none;
+    cursor: pointer;
+    background: #19bcb7;
+    transition: all .3s ease;
+    -webkit-backface-visibility: hidden;
+    transform: translateZ(0);
+    border: 2px solid transparent;
+    border-bottom-color: transparent;
+    border-bottom-color: #079ea9;
+    box-shadow: 0 4px 6px rgba(0,0,0,.25);
+}
+
+.FilterSelect_Button_3 {
+    pointer-events: all;
+    opacity: 1;
+    position: relative;
+    margin: 10px 23px 5px;
+    transition: all .3s ease;
+}
