--- a/src/components/UI/Background/Background.module.css
+++ b/src/components/UI/Background/Background.module.css
@@ -7,8 +7,8 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background-image: url("https://store.gaijin.net/img/storefront/custom/en_gaijin/back_bg.jpg");
     display: block;
+    background-image: url("https://store.gaijin.net/img/storefront/custom/en_gaijin/back_bg.jpg");
     background-position: 50% 0;
     background-blend-mode: screen;
     background-repeat: no-repeat;
@@ -16,5 +16,20 @@
     background-size: cover;
     transition: opacity .3s ease;
     -webkit-tap-highlight-color: transparent;
+}
 
+.BackgroundImage {
+
+}
+
+.Background::before {
+    top: 0;
+    height: 10%;
+    background: linear-gradient(to bottom, #27323f 0%, transparent 100%);
+}
+
+.Background::after {
+    bottom: 0;
+    height: 28%;
+    background: linear-gradient(to top, #27323f 0%, transparent 100%);
 }
