--- a/src/components/UI/ProductForm/ProductForm.module.css
+++ b/src/components/UI/ProductForm/ProductForm.module.css
@@ -42,6 +42,35 @@
     z-index: 100;
 }
 
+.ProductForm_SpLide_Slider {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+.ProductForm_SpLide_Slider_Track {
+    height: auto !important;
+    aspect-ratio: 1.7777778;
+    width: 100%;
+}
+
+.ProductForm_SpLide_Slide_List {
+    transform: none !important;
+    flex-wrap: wrap;
+    height: 100%;
+}
+
+.ProductForm_SpLide_Slide {
+    z-index: auto;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    height: 100%;
+    outline: none;
+}
+
 .ProductForm_image {
     position: absolute;
     z-index: 100;
@@ -87,7 +116,7 @@
 
 .ProductForm_ASide_Sticky {
     position: absolute;
-    top: auto;
+    top: 0;
     bottom: 0;
     width: 390px;
 }
@@ -124,3 +153,60 @@
     margin: 0 6px;
     color: #ffe8aa;
 }
+
+.ProductForm_ShopBuy_ButtonWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 16px;
+    margin-bottom: 16px;
+}
+
+.ProductForm_ShopBuy_BuyButton_2::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ee2727;
+    background-image: url(https://store.gaijin.net/templates/shop/src/736aeb558f991d295135.png),linear-gradient(180deg, #fd8415 0%, #ff5c00 7.73%, transparent 56.35%);
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-size: cover;
+    transition: all .3s ease;
+}
+
+.ProductForm_ShopBuy_BuyButton_1 {
+    min-width: 282px;
+    min-height: 56px;
+    padding: 8px 20px;
+    border-radius: 3px;
+    font-size: 28px;
+}
+
+.ProductForm_ShopBuy_BuyButton_2 {
+    position: relative;
+    z-index: 100;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    overflow: hidden;
+    line-height: 1.2;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    cursor: pointer;
+    border: none;
+
+    box-shadow: 0 5px 13px rgba(89,16,0,.65);
+    transition: all .3s ease;
+}
+
+.ProductForm_ShopBuy_BuyButton_3 {
+    width: 100%;
+    text-align: center;
+}
+
