--- a/src/components/UI/AddProductForm/AddProductForm.module.css
+++ b/src/components/UI/AddProductForm/AddProductForm.module.css
@@ -9,7 +9,7 @@
     position: relative;
     z-index: 100;
     width: 900px;
-    height: 400px;
+    height: 450px;
     overflow: hidden;
     border-top: 1px #334251 solid;
     background: #2d3a48;
@@ -20,4 +20,22 @@
     z-index: 200;
     height: 100%;
     padding: 36px 130px 36px 32px;
+}
+
+.AddProductForm_Title {
+    padding: 20px 15px;
+    background: transparent;
+    color: #fff;
+    box-sizing: border-box;
+    font-size: 14px;
+    font-family: "Fira Sans",Arial,sans-serif;
+}
+
+.AddProductForm_Title_Text {
+    padding: 0;
+    font-size: 32px;
+    color: #fff;
+    font-family: "Fira Sans",sans-serif;
+    font-weight: 500;
+    margin-bottom: 24px;
 }
